force-app/main/default/objects/TAD_Booking_Records__c/TAD_Booking_Records__c.object-meta.xml
<CustomObject>
    <label>TAD Booking Records</label>
    <nameField>
        <displayFormat>TBR-{000000}</displayFormat>
        <label>TAD Booking records Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TAD Booking Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>