force-app/main/default/objects/TAD_Booking_Records__c/fields/Booked_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Booked_Component_Type__c</fullName>
    <label>Booked Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flight</fullName>
            </value>
            <value>
                <fullName>Land Tour</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Total Package</fullName>
            </value>
            <value>
                <fullName>Accom</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Land Activity</fullName>
            </value>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>SB</fullName>
            </value>
            <value>
                <fullName>S/Over</fullName>
            </value>
            <value>
                <fullName>Flight Upgrade</fullName>
            </value>
            <value>
                <fullName>Departure City Surcharge</fullName>
            </value>
            <value>
                <fullName>AE Accommodation</fullName>
            </value>
            <value>
                <fullName>SB Accommodation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>