force-app/main/default/objects/TAD_Booking_Records__c/fields/Booking_reference__c.field-meta.xml
<CustomField>
    <fullName>Booking_reference__c</fullName>
    <label>Booking reference</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>