force-app/main/default/objects/TAD_Booking_Records__c/fields/Credit_Card_GLA__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_GLA__c</fullName>
    <label>Credit Card GLA</label>
    <length>80</length>
    <type>Text</type>
</CustomField>