force-app/main/default/objects/TAD_Booking_Records__c/fields/Credit_Card_Payments__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Payments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Card Payments</label>
    <referenceTo>Credit_Card_Payments__c</referenceTo>
    <relationshipLabel>TAD Booking Records</relationshipLabel>
    <relationshipName>TAD_Booking_Records</relationshipName>
    <type>Lookup</type>
</CustomField>