force-app/main/default/objects/TAD_Booking_Records__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <formula>TAD_Order__r.ordexp_deal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal</label>
    <type>Text</type>
</CustomField>