force-app/main/default/objects/TAD_Booking_Records__c/fields/Deal_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Deal_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Transaction</label>
    <referenceTo>Deal_Transaction__c</referenceTo>
    <relationshipLabel>TAD Booking Records</relationshipLabel>
    <relationshipName>TAD_Booking_Records</relationshipName>
    <type>Lookup</type>
</CustomField>