force-app/main/default/objects/TAD_Booking_Records__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <formula>TAD_Order__r.ordexp_departure_date__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date</label>
    <type>Text</type>
</CustomField>