force-app/main/default/objects/TAD_Booking_Records__c/fields/departures_dates__c.field-meta.xml
<CustomField>
    <fullName>departures_dates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure Date</label>
    <referenceTo>departures_dates__c</referenceTo>
    <relationshipLabel>TAD Booking Records</relationshipLabel>
    <relationshipName>TAD_Booking_Records</relationshipName>
    <type>Lookup</type>
</CustomField>