force-app/main/default/objects/TAD_Booking_Records__c/fields/GST_Included__c.field-meta.xml
<CustomField>
    <fullName>GST_Included__c</fullName>
    <label>GST Included</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>