force-app/main/default/objects/TAD_Booking_Records__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TAD Booking Records</relationshipLabel>
    <relationshipName>TAD_Booking_Records</relationshipName>
    <type>Lookup</type>
</CustomField>