force-app/main/default/objects/TAD_Booking_Records__c/fields/Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line</label>
    <referenceTo>order_line__c</referenceTo>
    <relationshipLabel>TAD Booking Records</relationshipLabel>
    <relationshipName>TAD_Booking_Records</relationshipName>
    <type>Lookup</type>
</CustomField>