force-app/main/default/objects/TAD_Booking_Records__c/fields/PAX__c.field-meta.xml
<CustomField>
    <fullName>PAX__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAX</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.TAD_Order__c</field>
            <operation>equals</operation>
            <valueField>customer_POE__c.ordexp_tad_order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>customer_POE__c</referenceTo>
    <relationshipLabel>TAD Booking Records</relationshipLabel>
    <relationshipName>TAD_Booking_Records</relationshipName>
    <type>Lookup</type>
</CustomField>