force-app/main/default/objects/TAD_Booking_Records__c/fields/Payable_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Payable_Invoice__c</fullName>
    <formula>if(
   Deal_Transaction__r.Status_formula__c = &quot;Active&quot;,
   Deal_Transaction__r.Payable_Invoice__r.Name,
    Deal_Transaction__r.Payable_Credit_Note__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payable Invoice</label>
    <type>Text</type>
</CustomField>