force-app/main/default/objects/TAD_Booking_Records__c/fields/Process_DT__c.field-meta.xml
<CustomField>
    <fullName>Process_DT__c</fullName>
    <formula>or( text(Status__c) = &quot;Paid&quot;, text(Status__c) = &quot;Cancellation Processed&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process DT</label>
    <type>Checkbox</type>
</CustomField>