force-app/main/default/objects/TAD_Booking_Records__c/fields/Processed_DT__c.field-meta.xml
<CustomField>
    <fullName>Processed_DT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed DT</label>
    <type>Checkbox</type>
</CustomField>