force-app/main/default/objects/TAD_Booking_Records__c/fields/TAD_Booking_record_number__c.field-meta.xml
<CustomField>
    <fullName>TAD_Booking_record_number__c</fullName>
    <label>TAD Booking record number</label>
    <length>215</length>
    <type>Text</type>
</CustomField>