force-app/main/default/objects/TAD_Booking_Records__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <formula>Credit_Card_Payments__r.Transaction_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Credit Card Payment Date</inlineHelpText>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>